# logstat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
include/logstat/: aggregator.hpp  errors.hpp  prop_set.hpp  stats.hpp  thread_pool.hpp  threadsafe_queue.hpp  writer.hpp
src/: CMakeLists.txt  aggregator.cpp  jsonlib.hpp  thread_pool.cpp  writer.cpp
tools/: generate_log_file.py
